# sound-simulator

./: Cargo.toml
src/: lib.rs  main.rs  sin_generator.rs  wav_export.rs
